map styles correction on smaller devices

--- a/styles/uploaded.css
+++ b/styles/uploaded.css
@@ -1,4 +1,5 @@
 .uploaded-data{
+    width: 100%;
     margin-top: 3em;
     display: flex;
     flex-wrap: wrap;
@@ -21,26 +22,23 @@
 }
 
 @media (min-width: 1px) and (max-width: 480px) {
-    .uploaded-img{
-        width: 100%;
-    }
     .uploaded-data__img{
         width: 100%;
     }
+
     .map{
-        width: 100%;
+        width: 90%;
+        min-width: 300px;
     }
 
 }
 
 @media (min-width: 481px) and (max-width: 768px){
-    .uploaded-img{
-        width: 100%;
-    }
     .uploaded-data__img{
         width: 100%;
     }
     .map{
-        width: 100%;
+        width: 90%;
+        min-width: 300px;
     }
 }
